aggiunto avviso aggiornamento listino

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -393,4 +393,25 @@ a:hover {
 .portata__sx {
   width: 100% !important;
 }
+
+.info__container {
+  font-family: 'Bebas Neue';
+  color: #742d2d;
+  font-size: 42px;
+  text-align: center;
+  margin: 30px auto;
+  padding: 30px;
+  border: 3px dotted red;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.info__container .info {
+  text-align: center;
+  font-family: "Poppins";
+  font-size: 20px;
+  text-transform: lowercase;
+  color: black;
+}
 /*# sourceMappingURL=style.css.map */
