--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -373,6 +373,9 @@ a:hover {
   }
 }
 
+
+
+//per nascondere prezzo
 .portata__dx {
   width: 0%;
   display: none;
@@ -380,4 +383,22 @@ a:hover {
 
 .portata__sx {
   width: 100%!important;
+}
+
+.info__container{
+    font-family: 'Bebas Neue';
+    color: #742d2d;
+    font-size: 42px;
+    text-align: center;
+    margin: 30px auto;
+    padding: 30px;
+    border: 3px dotted red;
+    width: fit-content;
+    .info {
+        text-align: center;
+        font-family: "Poppins";
+        font-size: 20px;
+        text-transform: lowercase;
+        color:black;
+    }
 }
