--- a/public/style/winter-style.css
+++ b/public/style/winter-style.css
@@ -433,7 +433,7 @@ a:hover {
 
 .info__container {
   font-family: 'Bebas Neue';
-  color: #742d2d;
+  color: #c0c0c0;
   font-size: 42px;
   text-align: center;
   margin: 30px auto;
